# cpp-slotspinner

./: CMakeLists.txt  README.md  SlotSpinner.lnk  main.cpp
